# eth-transaction-exporter

./: .gitignore  Readme.md  pyproject.toml  requirememts.txt
src/: config.py  exceptions.py  main.py
src/models/: transaction.py
src/services/: __init__.py  etherscan_service.py  transaction_processor.py
src/utils/: csv_writer.py  logger.py  validators.py
tests/: test_csv_writer.py  test_etherscan_service.py  test_transaction_processor.py
